popup overlay on size chart, delivery details fixed on safari

--- a/app/design/frontend/peterjacksons/petertheme/web/css/blocks/_size-chart.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/blocks/_size-chart.scss
@@ -14,6 +14,16 @@ body[class~='cms-size-chart'] {
     }
 }
 
+.size-chart-overlay {
+    display: block;
+    z-index: 1000;
+    background-color: rgba(1, 1, 1, 0.5);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
 .size-chart {
     width: 100%;
     z-index: 11;
@@ -29,8 +39,18 @@ body[class~='cms-size-chart'] {
     &--open {
         display: flex !important;
         flex-direction: column;
-        z-index: 999;
-        border: 1px solid;
+        background: white;
+        top: 50%;
+        left: 50%;
+        max-width: 1024px;
+        width: 90%;
+        transform: translate(-50%, -50%);
+        position: fixed;
+        max-height: 90%;
+        overflow-y: auto;
+        padding: 20px 40px;
+        box-sizing: border-box;
+        border: 0;
     }
 
     &__overlay {
